--- a/задание4/style.css
+++ b/задание4/style.css
@@ -1,9 +1,9 @@
-﻿@font-face {
+﻿@font-face{
     font-family: Sasha2;
-    src: url(fonts/pattaya-regular.ttf);
+    src: url('fonts/pattaya-regular.ttf');
 }
 
-html {
+html{
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
 }
@@ -17,20 +17,20 @@ a{
     text-decoration: none;
 }
 
-p {
+p{
     text-indent: 1.3em;
     line-height: 2em;
     text-align:justify;
     width: 200px;
 }
 
-img {
+img{
      height:200px;
-  }
+}
 
 h1{
     text-align: center;
-    font-family: Sasha2;
+    font-family: 'Sasha2';
     font-size: 3rem;
     text-transform: capitalize;
 }
@@ -42,10 +42,14 @@ h2{
     text-transform: uppercase;
 }
 
-table {border: 1px solid rgb(0, 0, 0);} 
-td {border: 1px solid rgb(0, 0, 0);} 
-th {
+table{
+    border: 1px solid rgb(0, 0, 0);
+    border-collapse: collapse;
+}
+
+td{border: 1px solid rgb(0, 0, 0);} 
+
+th{
     border: 1px solid rgb(0, 0, 0);
     font-style: italic;
 }
-table {border-collapse: collapse;}
