--- a/занятие7/styles.css
+++ b/занятие7/styles.css
@@ -13,21 +13,6 @@ html{
     font-family: 'Tahoma';
 } 
     
-div{
-    width: 100%;
-    height: 100vh;
-    text-align: center;
-}
-
-span{
-    font-family: 'CocaCola';
-    font-size: 40px;
-}
-
-a{
-    font-family: 'CocaCola';
-    font-size: 28px;
-}
 
 p{
     line-height: 2em;
@@ -35,19 +20,43 @@ p{
     text-indent: 2em;
 }
 
-.master{
+.title{
+    font-family: 'CocaCola';
+    font-size: 40px;
+   
+    padding: 24px;
+    display: block;
+}
+
+.link{
+    display: inline-block;
+    margin: 20px 20px;
+    font-family: 'CocaCola';
+    font-size: 28px;
+}
+
+
+.pic-master{
+    
+    display: block;
     width: 260px;
+    margin:0 auto;
 }
     
-.picture-master{
-    text-align: center; 
-    text-indent: 0em;
+
+.page{
+    width: 100%;
+    min-height: 100vh;
+    text-align: center;
+   
+    
 }
 
 .block-one{
     background-image: url(images/bg-1.jpg);
     background-size: cover;
     color: white;
+    padding-top: 1px;
 }
 
 .block-two{
@@ -80,9 +89,6 @@ p{
     color: #808000;
 }
 
-.opacity-block{
-    opacity: 0;
-}
 
 .cell{
     border-style: solid;
@@ -92,7 +98,9 @@ p{
 }
 
 .tabl{
-     border-collapse: collapse;
+    border-collapse: collapse;
+    box-shadow: 0 0 10px rgba(57, 238, 34, 0.877);
+
 }
 
 th{
@@ -102,4 +110,50 @@ th{
 td{
     font-variant-caps: all-small-caps;
     text-align: justify;
+}
+
+.menu{
+    list-style: none;
+    background-color: #1dfa00b4;
+    border: solid 1px #a2d3e6;
+    border-radius: 20px;
+    padding-left: 20px;
+    text-align: left;
+    margin-left: 20px;
+    margin-right: 20px;
+    
+}
+
+.menu li{
+    display: inline-block;
+    padding: 20px 0px 20px 0px;
+    
+}
+
+.menu-link{
+    text-decoration: none;
+    font-family: Impact;
+    font-variant: normal;
+    font-size: 28px;
+    padding: 20px 40px 20px 40px;
+}
+
+.menu-link:hover {
+    color: rgb(230, 230, 221); /* Цвет ссылки */ 
+} 
+
+.menu-link:active {
+    color: rgb(219, 240, 28); /* Цвет активной ссылки */ 
+}
+
+.menu li:hover{
+    background: #ec423d;
+}
+
+.link:hover{
+    color: rgb(170, 59, 137);
+}
+
+.link:active {
+    color: rgb(219, 240, 28);
 }
