--- a/Задание 19/Рабочая/styles.css
+++ b/Задание 19/Рабочая/styles.css
@@ -30,7 +30,7 @@ a {
     box-sizing: border-box;
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 11111;
     height: 65px;
 }
 
@@ -221,3 +221,51 @@ a {
     }
 }
     
+
+.video, .map, .audio{
+    border: none;
+    margin: 10px;
+    position: relative;
+    z-index: 2;
+}
+
+.block1{
+    width: 100%;
+    position: relative;
+    z-index: 2;
+    overflow: hidden;
+}
+
+.containerBlock1{
+    position: relative;
+    z-index: 2;
+}
+
+.cola-text{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.mask{
+    position: absolute;
+    opacity: 0.5;
+    z-index: 1;
+    width: 100%;
+    min-height: 100vh;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    left: 0;
+}
+
+.info{
+    position: absolute;
+    top: 582px;
+    right: 110px;
+    background-color: rgb(0, 255, 255);
+    font-weight: bold;
+    z-index: 3;
+    width: 250px;
+    height: 30px;
+    text-align: center;
+}
